--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 contentdir = "content"
 layoutdir = "layouts"
 publishdir = "public"
-baseurl = "http://daycare.danieldurante.com/"
+baseurl = "http://bruckner.danieldurante.com/"
 languageCode = "en-us"
 canonifyurls = true
 title = "James Bruckner Hope Fund"
